[FIX] Quality fixes for sonarcloud